# resp_lanu

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: resp-lanu.service
docs/: architecture.md  configuration.md  deployment.md  experiment_process.md  operator_notes.md  pi5_run_log.md  raspberry_pi_quickstart.md
docs/adr/: 0001-local-service-architecture.md
resp_lanu/: __init__.py  asr.py  audio.py  features.py
sample_audio/: demo_cn.txt  demo_cn_grammar.json  demo_cn_phrase_hints.json
scripts/: _bootstrap.py  dialog_window.py  extract_features.py  preprocess_audio.py  record_audio.sh  run_pipeline.py  run_pipeline.sh  run_server.sh  run_vosk_asr.py  setup_pi.sh
src/resp_lanu/: __init__.py  asr.py  audio.py  cli.py  features.py  gui.py  legacy.py  pipeline.py  providers.py  runtime.py  schemas.py  settings.py  storage.py  web.py
src/resp_lanu/static/: app.js  style.css
src/resp_lanu/templates/: artifacts.html  assistant.html  base.html  health.html  history.html  login.html  settings.html
tests/: __init__.py  conftest.py  test_asr_phrase_hints.py  test_audio_pipeline.py  test_service_api.py
